fix hero overflow

--- a/src/app/pages/main/components/hero/message/message.css
+++ b/src/app/pages/main/components/hero/message/message.css
@@ -1,6 +1,5 @@
 .hero__message {
-  min-width: 20em;
-  max-width: 28em;
+  max-width: 20em;
   color: var(--Gray-Lighter, #d9dfe8);
 
   /* text-7xl/normal */
